--- a/style.css
+++ b/style.css
@@ -1,28 +1,65 @@
 *{
     margin:0;
     padding: 0;
+    font-family: 'PT Serif', serif;
+}
+h2 {
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    margin-bottom: 40px;
 }
 #formulaire{
  border: 1px solid black;
  display: flex;
  flex-direction: column;
- height: 300px;
- justify-content: space-between;
+ height: 500px;
+ width: 450px;
  opacity:0.3;
  border-radius: 10px;
- width: 500px;
- text-align: center;
- background-color: aqua;
-
+ background-color:transparent;
+ backdrop-filter: blur(20px);
+ border: 1px white solid;
+ justify-content: center;
+ align-items: center;
 
 }
+.Jour{
+    
+    display: flex;
+    justify-content: space-between;
+    color: white;
+}
+.espace{
+    
+    width: 80%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: left;
+}
+
 input{
-    width: 50%;
-    border-radius: 3px;
+    width: 70%;
+    background: transparent;
+    border: none;
+    border-bottom: 2px white solid;
+    color: white;
 }
 #cancel{
-    width: 50%;
-    margin: 0 auto;
+    margin-top: 30px;
+    width: 200px;
+    height: 30px;
+    border: 1px white solid;
+    border-radius: 10px;
+    color: rgb(247, 245, 245);
+    background-color: transparent;
+
+    
+    
+
+
 }
 body{
     text-align: center;
@@ -31,10 +68,22 @@ body{
     align-items: center;
     min-height:100vh;
     justify-content:center;
+    background-color: black;
+    background: url(back.jpg);
+ background-size: cover;
+ background-position: center;
 }
 #button{
     position: absolute;
-    top: 400px;
-    left: 690px;
+    top: 420px;
+    left: 615px;
+    width: 200px;
+    height: 30px;
+    border:1px solid aqua;
+    border-radius: 10px;
+    color: aqua;
+    background-color: black;
+    box-shadow: 0 0 10px aqua;
+    
     
 }
